updated docker file for jdk25