@@ -1,11 +1,15 @@
-FROM maven:3.9.8-eclipse-temurin-21 as build
+FROM maven:3.9-eclipse-temurin-25 AS build
 
 COPY . /app
 WORKDIR /app
-RUN mvn clean install -DskipTests
+
+RUN mvn clean package -DskipTests
 
 
-FROM amazoncorretto:21-alpine-jdk
+FROM eclipse-temurin:25-jre
+
 COPY --from=build /app/target/*.jar app.jar
+
 EXPOSE 8080
-CMD ["java", "-jar", "app.jar"]
+
+CMD ["java", "--enable-preview", "-jar", "app.jar"]
